# demo

./: README.md
c++/: scope_guard.cc
c++/cmake/cmake_test/: CMakeLists.txt  README.md  coverage_report.sh
c++/cmake/cmake_test/include/: utils.h
c++/cmake/cmake_test/src/: CMakeLists.txt  main.cc
c++/cmake/cmake_test/src/utils/: CMakeLists.txt  utils.cc
c++/cmake/cmake_test/test/: CMakeLists.txt  main.cc
system/lnx/: get_proxy_settings_by_gsettings.cc
system/lnx/fw/: README.md
system/mac/fw/: README.md
system/proc/: start_texteditor.cc
system/win/FW/: fw_rule_action.cc
system/win/WFP/: README.md
system/win/WFP/EDRSilencer/: EDRSilencer.cc  utils.cc  utils.h
system/win/misc/: force_delete_file_or_folder.bat
system/win/proc/: GetRealProcPath.cc  set_critical_proc.cc
